--- a/index.html
+++ b/index.html
@@ -29,8 +29,26 @@
             </div>
             <div id="paso-2" class="seccion">
                 <h2>Tus datos y Cita</h2>
+                <p class="text-center">Coloca tus datos y la fecha de tu cita</p>
+
+                <form class="formulario">
+
+                    <div class="campo">
+                        <label for="nombre">Nombre</label>
+                        <input id="nombre" type="text" placeholder="Tu Nombre">
+                    </div>
+                    <div class="campo">
+                        <label for="fecha">Fecha</label>
+                        <input id="fecha" type="date">
+                    </div>
+                    <div class="campo">
+                        <label for="hora">Fecha</label>
+                        <input id="hora" type="time">
+                    </div>
+
+                </form>
             </div>
-            <div id="paso-3" class="seccion">
+            <div id="paso-3" class="seccion contenido-resumen">
                 <h2>Resumen</h2>
             </div>
 
