--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <input id="fecha" type="date">
                     </div>
                     <div class="campo">
-                        <label for="hora">Fecha</label>
+                        <label for="hora">hora</label>
                         <input id="hora" type="time">
                     </div>
 
